== Change Log

=== SVN
* Disambiguate namespace of ActionMailer::Part. [Sean Cribbs]
* Fix namespacing problem with ActionController::RoutingError. [Sean Cribbs]
* Update Rails to 1.2.5. [John Long]
* Ensured that the request and response are passed along to other pages that
  are rendered within the same context. [John Long]
* Added <r:if_dev /> and <r:unless_dev /> tags. [Peter Berkenbosch]
* Removed session stringification patch in test helper. [Sean Cribbs]
* Update Rails to 1.2.4. [Sean Cribbs]
* Add extensions paths to the standard $LOAD_PATH so requires work properly.
  [Sean Cribbs]
* Fixed some loading issues for plugins that are included in extensions. 
  [Sean Cribbs]

=== 0.6.3 Rock Grinder
* Add generic public/ copy task to generated extensions. [Sean Cribbs]
* Fix typo in StandardTags. [oli]
* Added db:remigrate:extensions task. [Sean Cribbs]
* Show all child pages on remove confirmation, regardless of sitemap expansion. [Sean Cribbs]
* Make LoginSystem store user ids in session rather than whole user objects. [Sean Cribbs]
* Plugins included in an extension's vendor/plugins directory will automatically
  be loaded before the extension is activated. Plugins included in more than one extension
  will be loaded only once according to the extension load order. [Sean Cribbs]
* Allow subclassing of FileNotFoundPage. [Daniel Sheppard]
* <r:find/> should not return FileNotFoundPage. [Daniel Sheppard]
* Change test for tabs to just check dupes and for the requested tab 
  rather than a specific list (test was breaking if a real extension added 
  a tab). [Daniel Sheppard]
* Ensure test extensions are loaded in the test environment. [Daniel Sheppard]
* Prevent ExtensionInitializationTest from unloading real extensions. [Daniel Sheppard]
* Expire the old URL from the cache when the page slug changes. [Daniel Sheppard]
* Fix failing tests in instance mode. [Daniel Sheppard]