@@ -58,8 +58,8 @@ ActiveRecord::Schema.define(:version => 16) do
     t.column "updated_at", :datetime
   end
 
-  add_index "sessions", ["session_id"], :name => "index_sessions_on_session_id"
   add_index "sessions", ["updated_at"], :name => "index_sessions_on_updated_at"
+  add_index "sessions", ["session_id"], :name => "index_sessions_on_session_id"
 
   create_table "snippets", :force => true do |t|
     t.column "name",         :string,   :limit => 100, :default => "", :null => false
