@@ -1,6 +1,8 @@
 == Change Log
 
 === SVN
+* Allow parts to be accessed by name from Page#part before they are saved.
+  [Sean Cribbs]
 * Disambiguate namespace of ActionMailer::Part. [Sean Cribbs]
 * Fix namespacing problem with ActionController::RoutingError. [Sean Cribbs]
 * Update Rails to 1.2.5. [John Long]
